fix/2 - fix problems by comments